<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/taskCardView"
    android:elevation="4dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/verticalLayout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/horizontalLayout"
            android:paddingLeft="4dp"
            android:paddingTop="2dp"
            android:orientation="horizontal"
            android:paddingRight="4dp">

            <TextView
                android:id="@+id/taskNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/task_number"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#8F8F84"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTask"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/task_description"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/imageViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/date_content_description"
                android:focusable="true"
                android:src="@drawable/ic_date"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/imageViewDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/delete_content_description"
                android:focusable="true"
                android:src="@drawable/ic_delete"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBoxDone"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/done" />

    </LinearLayout>
</androidx.cardview.widget.CardView>