<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/title_textview" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleTextView"
        android:layout_marginBottom="2dp"
        android:id="@+id/taskRecyclerview" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        android:contentDescription="@string/button_clear_description"
        android:elevation="2dp"
        android:focusable="true"
        android:src="@drawable/ic_delete_sweep"
        android:tint="@android:color/white"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:clickable="true"
        android:contentDescription="@string/button_add_description"
        android:elevation="2dp"
        android:focusable="true"
        android:src="@drawable/ic_add"
        android:tint="@android:color/white"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>
